# ChangeLog for sys-apps/ksplice
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Oct 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> ksplice-9999.ebuild:
  Update EGIT_REPO_URI, and HOMEPAGE

  18 Oct 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  -ksplice-0.9.1.ebuild, +ksplice-0.9.2.ebuild:
  Version bump, remove old

  09 Oct 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  -ksplice-0.8.7.ebuild, +ksplice-0.9.1.ebuild:
  Version bump, remove old

  30 Jul 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  ksplice-0.8.7.ebuild, ksplice-9999.ebuild:
  Make dodoc die on failure

  26 Jun 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  ksplice-0.8.7.ebuild, ksplice-9999.ebuild:
  Install ChangeLog

  21 Jun 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  -ksplice-0.8.6.ebuild, +ksplice-0.8.7.ebuild:
  Version bump, remove old

  11 Jun 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  ksplice-0.8.6.ebuild, ksplice-9999.ebuild:
  Simplify die messages

  26 May 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  -ksplice-0.8.4.ebuild, +ksplice-0.8.6.ebuild:
  Version bump, remove old

  29 Apr 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> ksplice-9999.ebuild:
  DEPEND on dev-lang/perl too in the live git ebuild

  29 Apr 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  ksplice-0.8.4.ebuild:
  pod2man is required at build time, hence DEPEND on dev-lang/perl too

  29 Apr 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  -ksplice-0.8.3.ebuild, +ksplice-0.8.4.ebuild:
  Version bump, remove old

  28 Apr 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  -ksplice-0.8.2.ebuild, +ksplice-0.8.3.ebuild:
  Version bump, remove old

  27 Apr 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  +ksplice-9999.ebuild:
  Add live ebuild

  27 Apr 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>
  -ksplice-0.8.1.ebuild, +ksplice-0.8.2.ebuild:
  Version bump, remove old

  25 Apr 2008; Tiago Cunha (tcunha) <me@tiagocunha.org>