@@ -1,5 +1,5 @@
 DIST ksplice-0.9.2-src.tar.gz 160015 RMD160 b92bea2754a4d1d80c1458f6ad9aca256cf55d7f SHA1 50e80d944d791e360829af3bbed97ba625f9e39f SHA256 10f980a5f5c01a8aec08d27a777103479596dfee64d80cbea795a835ed036a11
-EBUILD ksplice-0.9.2.ebuild 479 RMD160 7ea49136d633b5ed0abba7459d0d6d116a91ced4 SHA1 38b5133e25db6f2a00c8343253cba7cd74452274 SHA256 80406fd48ffffd5894bdf4e8fc66adf7ab31e06f2e220e1ba27a91e469a2b9ce
-EBUILD ksplice-9999.ebuild 485 RMD160 d408fa0b7cc1d777ddd3d9aa6e688d8c6a33cc98 SHA1 c182012bab54cd26c1c1d2f1623a05f9a5b70da0 SHA256 6ea478202f0098ba3ec22e6a4c78fd80f32fd45b98cec17aba78b1a3615dc5a7
-MISC ChangeLog 2075 RMD160 3ee8c1675b4f972a595be4886ceb06dbaa5c1449 SHA1 2d8d14b6c511f4f150881e3e004ff77720a3d65f SHA256 e26ba82ce3fa5b9ca63ea84ac3267db2c3447925a23a5fe2d804e0712a5dd7b5
+EBUILD ksplice-0.9.2.ebuild 473 RMD160 a210e059b39672002f83b85ec5a03e2c75c461ec SHA1 5091ba0182f3767c14348762af51ff5279d9a5d0 SHA256 e52ee6d994866443dcad9abab6f0c922e951bf5b6135c61eb84ddea521a193a4
+EBUILD ksplice-9999.ebuild 497 RMD160 0b3a799236c2943215633519792faa9167c8c8f3 SHA1 2489f881b101f9ae332e0bc8212229bc9b0d4228 SHA256 d0e5391aa287d7d88253161c8964efb89a836005dfb767ea3afc42029592392c
+MISC ChangeLog 2272 RMD160 da954d7ae60c7d22049fa8cd8745dda68dc03115 SHA1 525d07ee87f969b45ae4bf5ac65693579b308b3b SHA256 a7158ff25041ce71799a70c9850f6ad4a809f4290ab1842ba4e7b58b3cfa6cbb
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
