@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/ksplice
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Jan 2009; Christian Ruppert (idl0r) <spooky85@gmail.com>
+  ksplice-0.9.2.ebuild, ksplice-9999.ebuild:
+  Add suggested RDEPEND=${DEPEND}, replaced package name in SRC_URI/REPO_URI
+  by ${PN}.
 
   18 Oct 2008; Tiago Cunha (tcunha) <me@tiagocunha.org> ksplice-9999.ebuild:
   Update EGIT_REPO_URI, and HOMEPAGE
